--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mercadopago/sdk-react": "^1.0.7",
     "@supabase/supabase-js": "^2.90.1",
     "@tailwindcss/vite": "^4.1.18",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.26.0",
     "lucide-react": "^0.562.0",
