--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "firebase": "^12.8.0",
     "framer-motion": "^12.26.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
