--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^17.2.3",
     "firebase": "^12.8.0",
     "framer-motion": "^12.26.0",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
+    "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-qr-code": "^2.0.18",
